<?xml version="1.0"?>
<package>
  <name>dvrk_robot_igtl</name>
  <version>0.1.0</version>
  <description>The dvrk_robot_igtl package</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dvrk_robot</build_depend>
  <build_depend>saw_open_igt_link</build_depend>
  <build_depend>cisst_msgs</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>dvrk_robot</run_depend>
  <run_depend>saw_open_igt_link</run_depend>
  <run_depend>cisst_msgs</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
